增加上下文RecyclerView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".business.h5help.H5HelpActivity" />
         <activity android:name=".business.search.SearchActivity" />
         <activity android:name=".business.more.MoreActivity" />
-        <activity android:name=".business.more.date.DateActivity" />
+        <activity android:name=".business.more.contextlist.ContextMenuRecyclerViewActivity" />
         <activity android:name=".business.selectpic.BaseSelectPicActivity" />
         <activity android:name=".business.crop.CropImageActivity" />
         <activity android:name=".business.more.ndk.NDKActivity" />
