--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity android:name=".business.crop.CropImageActivity" />
         <activity android:name=".business.more.ndk.NDKActivity" />
         <activity android:name=".business.more.drag.DragActivity" />
-        <activity android:name=".business.more.order.OrderActivity"></activity>
+        <activity android:name=".business.more.order.OrderActivity" />
+        <activity android:name=".business.more.progress.ProgressBarActivity"></activity>
     </application>
 
 </manifest>
