新增水印图片demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity android:name=".business.more.progress.ProgressBarActivity" />
         <activity
             android:name=".business.more.mazing.IDActivity"
-            android:theme="@style/AppBaseTheme"></activity>
+            android:theme="@style/AppBaseTheme" />
+        <activity android:name=".business.more.watermark.WatermarkActivity"></activity>
     </application>
 
 </manifest>
