--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity
             android:name=".business.more.mazing.IDActivity"
             android:theme="@style/AppBaseTheme" />
-        <activity android:name=".business.more.watermark.WatermarkActivity"></activity>
+        <activity android:name=".business.more.watermark.WatermarkActivity" />
+        <activity android:name=".business.more.moveview.MoveViewActivity"></activity>
     </application>
 
 </manifest>
