--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/xUtils-2.6.14.jar')
+    compile project(':InitActivity')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.bumptech.glide:glide:3.6.1'
@@ -62,16 +63,10 @@ dependencies {
     compile 'com.github.GrenderG:Toasty:1.1.4'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.liuguangqiang.cookie:library:0.2'
-
-    /*直播*/
-    compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'  //弹幕
-    compile project(':InitActivity')
+    compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
     compile 'com.github.GaoYin2016:Android-SVProgressHUD:1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
-    /*butterknife*/
-    compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
