--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".business.more.live.phone.PhoneLiveActivity" />
         <activity android:name=".business.more.dragview.DragViewActivity" />
         <activity android:name=".business.more.richtext.RichTextActivity" />
+        <activity android:name=".business.more.cling.ClingBarActivity"></activity>
     </application>
 
 </manifest>
