--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".XZQApplication"
@@ -55,7 +58,9 @@
         <activity android:name=".business.more.live.phone.PhoneLiveActivity" />
         <activity android:name=".business.more.dragview.DragViewActivity" />
         <activity android:name=".business.more.richtext.RichTextActivity" />
-        <activity android:name=".business.more.cling.ClingBarActivity"></activity>
+        <activity android:name=".business.more.cling.ClingBarActivity" />
+        <activity android:name=".business.more.record.RecordActivity" />
+        <activity android:name=".business.more.record.Record2Activity"></activity>
     </application>
 
 </manifest>
