--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,8 +60,9 @@
         <activity android:name=".business.more.richtext.RichTextActivity" />
         <activity android:name=".business.more.cling.ClingBarActivity" />
         <activity android:name=".business.more.record.RecordActivity" />
-        <activity android:name=".business.more.largedialog.LargeDialogActivity"/>
-        <activity android:name=".business.more.pulldownrefresh.PullDownRefreshActivity"/>
+        <activity android:name=".business.more.largedialog.LargeDialogActivity" />
+        <activity android:name=".business.more.pulldownrefresh.PullDownRefreshActivity" />
+        <activity android:name=".business.more.selectcity.SelectCityActivity"/>
     </application>
 
 </manifest>
