--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.jakewharton.butterknife'
 
 android {
     signingConfigs {
@@ -10,16 +9,17 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.xiezhenqi"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.Release
+        flavorDimensions "versionCode"
     }
     buildTypes {
         release {
@@ -51,30 +51,31 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/xUtils-2.6.14.jar')
-    compile project(':InitActivity')
-    compile files('libs/BaiduLBS_Android.jar')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.facebook.fresco:fresco:0.8.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'am.widget:replacelayout:1.1.0'
-    compile 'am.widget:gradienttabstrip:24.2.1.1'
-    compile 'com.github.GrenderG:Toasty:1.1.4'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'com.liuguangqiang.cookie:library:0.2'
-    compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
-    compile 'com.github.GaoYin2016:Android-SVProgressHUD:1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    compile 'com.lovedise:permissiongen:0.0.6'
-    compile 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/xUtils-2.6.14.jar')
+    implementation project(':InitActivity')
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation 'com.facebook.fresco:fresco:0.8.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'am.widget:replacelayout:1.1.0'
+    implementation 'am.widget:gradienttabstrip:24.2.1.1'
+    implementation 'am.drawable:drawable:1.4.0'
+    implementation 'com.github.GrenderG:Toasty:1.1.4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.liuguangqiang.cookie:library:0.2'
+    implementation 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
+    implementation 'com.github.GaoYin2016:Android-SVProgressHUD:1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.lovedise:permissiongen:0.0.6'
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
