--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,57 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xiezhenqi">
 
+    <!--6.0危险权限 start-->
+    <!--日历权限-->
+    <!--具体包括：读取日历、新建/修改/删除日历等权限-->
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
+    <!--相机权限-->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!--通讯录权限-->
+    <!--具体包括：读取联系人、新建/修改/删除联系人等权限-->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+    <!--定位权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!--麦克风权限-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <!--电话权限-->
+    <!--具体包括：读取本机识别码、拨打电话、读取通话记录、新建/修改/删除通话记录等权限-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.ADD_VOICEMAIL" />
+    <uses-permission android:name="android.permission.USE_SIP" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+    <!--身体传感器权限-->
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+
+    <!--短信权限-->
+    <!--具体包括：发送短息、接收短信、读取短信/彩信等权限-->
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
+    <uses-permission android:name="android.permission.RECEIVE_MMS" />
+
+    <!--存储权限-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--6.0危险权限 end-->
+
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -87,7 +138,7 @@
         <activity android:name=".business.more.largedialog.LargeDialogActivity" />
         <activity android:name=".business.more.pulldownrefresh.PullDownRefreshActivity" />
         <activity android:name=".business.more.selectcity.SelectCityActivity" />
-        <activity android:name=".business.more.zxing.ZxingActivity"/>
+        <activity android:name=".business.more.zxing.ZxingActivity" />
 
         <service
             android:name="com.baidu.location.f"
@@ -99,8 +150,7 @@
             android:value="SUmjHV4jEkK57Fj7UWoWjhWTqR7u79MU" />
 
 
-
-        <activity android:name=".business.more.playaac.MPermissionActivity"></activity>
+        <activity android:name=".business.more.permission.MPermissionActivity" />
     </application>
 
 </manifest>
