--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,8 @@
 
 
         <activity android:name=".business.more.permission.MPermissionActivity" />
+        <activity android:name=".business.more.mvp.MvpActivity" />
+        <activity android:name=".business.more.mvp.login.LoginActivity" />
     </application>
 
 </manifest>
