--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,30 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xiezhenqi">
 
-    <!--6.0危险权限 start-->
-    <!--日历权限-->
-    <!--具体包括：读取日历、新建/修改/删除日历等权限-->
+    <!-- 6.0危险权限 start -->
+    <!-- 日历权限 -->
+    <!-- 具体包括：读取日历、新建/修改/删除日历等权限 -->
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
-    <!--相机权限-->
+    <!-- 相机权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <!--通讯录权限-->
-    <!--具体包括：读取联系人、新建/修改/删除联系人等权限-->
+    <!-- 通讯录权限 -->
+    <!-- 具体包括：读取联系人、新建/修改/删除联系人等权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
-    <!--定位权限-->
+    <!-- 定位权限 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <!--麦克风权限-->
+    <!-- 麦克风权限 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <!--电话权限-->
-    <!--具体包括：读取本机识别码、拨打电话、读取通话记录、新建/修改/删除通话记录等权限-->
+    <!-- 电话权限 -->
+    <!-- 具体包括：读取本机识别码、拨打电话、读取通话记录、新建/修改/删除通话记录等权限 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -36,28 +36,25 @@
     <uses-permission android:name="android.permission.USE_SIP" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
-    <!--身体传感器权限-->
+    <!-- 身体传感器权限 -->
     <uses-permission android:name="android.permission.BODY_SENSORS" />
 
-    <!--短信权限-->
-    <!--具体包括：发送短息、接收短信、读取短信/彩信等权限-->
+    <!-- 短信权限 -->
+    <!-- 具体包括：发送短息、接收短信、读取短信/彩信等权限 -->
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
 
-    <!--存储权限-->
+    <!-- 存储权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--6.0危险权限 end-->
-
+    <!-- 6.0危险权限 end -->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -80,14 +77,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 访问网络，网络定位需要上网 -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- SD卡读取权限，用户写入离线定位数据 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
     <uses-permission android:name="android.permission.VIBRATE" /> <!-- 震动权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" /> <!-- 使用照相机权限 -->
-    <uses-feature android:name="android.hardware.camera.autofocus" /> <!-- 自动聚焦权限 -->
 
+    <uses-feature android:name="android.hardware.camera" /> <!-- 使用照相机权限 -->
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <!-- 自动聚焦权限 -->
     <application
         android:name=".XZQApplication"
         android:allowBackup="true"
@@ -149,11 +145,11 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="SUmjHV4jEkK57Fj7UWoWjhWTqR7u79MU" />
 
-
         <activity android:name=".business.more.permission.MPermissionActivity" />
         <activity android:name=".business.more.mvp.MvpActivity" />
         <activity android:name=".business.more.mvp.login.LoginActivity" />
         <activity android:name=".business.more.fit.FitActivity" />
+        <activity android:name=".newmvp.act.RXMVPActivity"></activity>
     </application>
 
 </manifest>
