RXMVP变更，增加dpi计算页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,7 +149,8 @@
         <activity android:name=".business.more.mvp.MvpActivity" />
         <activity android:name=".business.more.mvp.login.LoginActivity" />
         <activity android:name=".business.more.fit.FitActivity" />
-        <activity android:name=".newmvp.act.RXMVPActivity"></activity>
+        <activity android:name=".newmvp.act.RXMVPActivity"/>
+        <activity android:name=".business.more.fit.CalculateDpiActivity" />
     </application>
 
 </manifest>
