--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+
     productFlavors {
         amarket {
             return true
@@ -96,4 +102,5 @@ dependencies {
     implementation 'am.widget:stateframelayout:2.0.2'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
 }
